Bug 639105 - A new entry does not appear in History menu for the certain pages. r=dietrich